fix wave contrast issue in pager buttons

--- a/quotes.css
+++ b/quotes.css
@@ -63,7 +63,7 @@ ul {
 }
 
 .pager button {
-  color: #b9b9b9;
+  color: #353535;
   padding: 0.5em 0.6em;
   border: 1px solid #d2d2d2;
   border-radius: 2px;
